@@ -24,6 +24,7 @@ set, enable, disable
     matrix
     movie
     mypng
+    nag
     object
     objectcallback
     objectcgo
@@ -101,6 +102,7 @@ PyMOL>feedback enable
     matrix
     movie
     mypng
+    nag
     object
     objectcallback
     objectcgo
